# functions

./: .git-blame-ignore-revs  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build.bat  conanfile.py  gui.bat  sim_gui.bat
.claude/skills/: c_api_dll_pattern.md
.claude/templates/: function_ports_template.hpp
.claude/workflows/: add_function.md
conf/: build.yml
config/: default.yaml
projects/base/: default.yaml
projects/proj_alpha/: default.yaml
scripts/: df_gui.py  df_sim_gui.py
src/aeb/: AEBController.cpp  AEBController.hpp
src/component/: CMakeLists.txt
src/component/aeb/: AEBController.cpp  AEBController.hpp  CMakeLists.txt  aeb_function.cpp  aeb_function.hpp  aeb_ports.hpp  aeb_scaffold.cpp
src/component/common/: CMakeLists.txt  framework_scaffold.cpp
src/component/common/framework/: df_params.hpp  df_runner.cpp  df_runner.hpp  function_params.hpp  function_runner.cpp  function_runner.hpp  i_df_function.hpp  i_function.hpp  object_limits.hpp  ports.hpp
src/platform/autosar/: CMakeLists.txt
src/platform/carla/: README.md  carla_bridge.py  df_ctypes.py  frame_convert.py  mcap_recorder.py  requirements.txt  scenario.yaml
src/platform/carla/replay/: README.md  df_dll_sim_mcap.py  foxglove_stream.py  replay.py  requirements.txt  viz.py
src/platform/df_sil/: CMakeLists.txt  df_interface_c.cpp  df_interface_c.h  param_loader.cpp  param_loader.hpp
src/platform/sil/: CMakeLists.txt  functions_interface_c.cpp  functions_interface_c.h  param_loader.cpp  param_loader.hpp
src/platform/standalone/: CMakeLists.txt
src/project/base/: default.yaml
src/project/cus1/: default.yaml
src/project/proj_alpha/: default.yaml
src/utils/: CMakeLists.txt  README.md  guards.hpp
src/utils/colldet/: ttc.hpp
src/utils/curves/: curve_offset.hpp
src/utils/geometry/: angles.hpp
src/utils/models/: constant_acceleration.hpp  constant_position.hpp  constant_velocity.hpp  motion_model.hpp
tests/: CMakeLists.txt
tests/carla_scenarios/: canonical_10mps_30m.yaml  closing_ego20mps_lead10mps_30m.yaml  watchable_5mps_60m.yaml
tests/carla_testruns/: README.md  canonical_10mps_30m.mcap  closing_ego20mps_lead10mps_30m.mcap
tests/fixtures/: df_params_test.yaml
tests/unit/: test_aeb.cpp  test_scaffold.cpp
tests/unit/aeb/: test_aeb_function.cpp
tests/unit/common/framework/: test_df_params.cpp  test_df_runner.cpp  test_function_params.cpp  test_function_runner.cpp  test_ports.cpp
tests/unit/sil/: test_interface_c_api.cpp  test_param_loader.cpp
tests/unit/utils/: test_angles.cpp  test_curves.cpp  test_guards.cpp  test_mathlib_extras.cpp  test_motion_models.cpp  test_ttc.cpp
tools/carla/: README.md  carla_bridge.py  df_ctypes.py  frame_convert.py  mcap_recorder.py
tools/carla/replay/: README.md  df_dll_sim_mcap.py  foxglove_stream.py  requirements.txt  viz.py
